libplist (1.4-1) UNRELEASED; urgency=medium

  * New upstream release.
  * debian/rules:
   - Remove additional CFLAGS to pass correct flags.
   - Add additional LDFLAGS.
   - Use filter instead of findstring to find noopt.
  * debian/libplist++1.symbols.amd64
   - Removed, since symbols are too unstable and easily FTBFS.
     Closes: #605846, #615661, #618150
  * Set urgency to medium to fix RC bug.
  * debian/watch:
   - Update location of the tarballs.
  * debian/docs
   - Add general documentation files.
  * debian/copyright:
   - Update to DEP5 format.
  * debian/01-libs.private.patch:
   - Update.

 -- Julien Lavergne <gilir@ubuntu.com>  Sun, 20 Mar 2011 20:25:11 +0100

libplist (1.3-2) unstable; urgency=low

  * debian/rules:
   - Run the test suit for all arches.
   - Pass -g to CFLAGS (Closes: #579119).
  * debian/README.Debian:
   - Remove since we run the test suit on all arches.
  * debian/watch:
   - Fix the detection of the version, thanks Paul McEnery.
  * debian/control:
   - Wrap build-depends and depends.
   - Bump Standards-Version to 3.9.1.0, no changes needed.

 -- Julien Lavergne <julien.lavergne@gmail.com>  Mon, 08 Nov 2010 01:24:15 +0100

libplist (1.3-1) unstable; urgency=low

  * New upstream release.
  * debian/patches/
   - 04-ftbfs-armel.patch: Remove, merged upstream.
   - 05-plist_endian+align_fixes.patch: Remove, merged upstream.
  * debian/rules: Add DH_VERBOSE=1 to add verbosity when necessary.

 -- Julien Lavergne <julien.lavergne@gmail.com>  Mon, 24 May 2010 23:04:10 +0200

libplist (1.2-3) unstable; urgency=medium

  * debian/patches/05-plist_endian+align_fixes.patch: Endianness, alignment and
    type-punning fixes for binary plist support. Thanks Julien BLACHE for the
    patch. (Closes: #570580).

 -- Julien Lavergne <julien.lavergne@gmail.com>  Sat, 10 Apr 2010 18:19:34 +0200

libplist (1.2-2) unstable; urgency=low

  * debian/rules: Really make the test suit fatal only on supported arches.
